# ds-memory-game

./: README.md  __main__.py  main.py  pyproject.toml
src/: scrapper.py
src/entities/: __init__.py  game_message.py  points.py
src/enums/: __init__.py  status.py  subject.py
src/infra/: __init__.py  client.py  server.py
src/infra/entities/: __init__.py  identifier.py  message.py
src/pages/: __init__.py  game.py  home.py  host.py  join.py
